Made DNA strands curved instead of linear